# n02-rmg

./: .gitignore  build.bat  errr.cpp  errr.h  kaillera_ui.cpp  kaillera_ui_mslist.cpp  kailleraclient.cpp  kailleraclient.h  n02.rc  n02p.vcxproj  n02p.vcxproj.filters  p2p_ui.cpp  p2p_ui.h  player.cpp  resource.h  stats.cpp  stats.h  uihlp.h
.github/workflows/: build.yml
common/: k_socket.cpp
core/: p2p_core.cpp  p2p_core.h  p2p_instruction.cpp  p2p_instruction.h  p2p_message.h
kcore/: k_instruction.h  k_message.h  kaillera_core.cpp  kaillera_core.h
linux/: CMakeLists.txt  n02-linux.pro
linux/src/: main.cpp
linux/src/common/: containers.h  k_framecache.cpp  k_framecache.h  k_socket.cpp  k_socket.h  settings.cpp  settings.h  stats.h  timer.cpp  timer.h
linux/src/core/: module_manager.cpp  module_manager.h
linux/src/core/kaillera/: k_instruction.cpp  k_instruction.h  k_message.cpp  k_message.h  kaillera_core.cpp  kaillera_core.h
linux/src/core/p2p/: p2p_core.cpp  p2p_core.h  p2p_instruction.cpp  p2p_instruction.h  p2p_message.cpp  p2p_message.h
linux/src/core/playback/: player.cpp  player.h
linux/src/ui/: mainwindow.cpp  mainwindow.h
linux/src/ui/kaillera/: kaillera_master_dialog.cpp  kaillera_master_dialog.h  kaillera_server_dialog.cpp  kaillera_server_dialog.h  kaillera_server_select_dialog.cpp  kaillera_server_select_dialog.h
linux/src/ui/p2p/: p2p_connection_dialog.cpp  p2p_connection_dialog.h  p2p_selection_dialog.cpp  p2p_selection_dialog.h
linux/src/ui/widgets/: chat_widget.cpp  chat_widget.h
